# Exponent-Calculator

./: CMakeLists.txt  README.md
expCalculator/: CMakeLists.txt  exponentCalculator.cpp  exponentCalculator.h  exponentNumbers.h
expCalculator/tests/unit/: tests.cpp
gui/: CMakeLists.txt  main.cpp  maincalc.cpp  maincalc.h  maincalc.ui
